--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,26 @@ h4{
   padding: 5px 20px;
 }
 
+#resume{
+  margin-top: 25vh;
+} 
+
+.content-inner-about{
+  margin-bottom: 10vh;
+}
+
+@media only screen and (min-width:800px) {
+  .content-about{ 
+    padding: 80px 250px;
+  }
+}
+
+@media only screen and (max-width:800px) {
+  .content-about{
+    text-align: justify;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .email-text{
     display: none;
